# HeatMyHome-Simulator-Dev

./: .gitignore  CNAME  README.md  auto_compile.bat  auto_compile.py  cpp.js  cpp.wasm  extra.js  index.html  index.js  rust_index.js  rust_worker.js  style.css  worker.js  worker_linker.js
WebAssemblyTesting/: WebAssemblyTesting.vcxproj  WebAssemblyTesting.vcxproj.filters  animal.cpp  main.cpp  wash_simulator_cpp.sln
api/: app.js  webworker.cjs
archive/: call_empp.bat  hello.cpp
compiler/: auto_compile.py  worker_linker.js
docs/: cpp.wasm  index.html  index.js  worker.js
epc_api_node/: app.js
example/: index.html  index.js  worker.js
latest_stable/: index.html  index.js
matlab/: .gitignore  discount_rate.m  grad_desc_v1.m  grad_desc_v1_no_plots.m  matlab.m  matlab_v2.m  optimiser_1D_v1.m  optimiser_3d_v1.m  optimiser_3d_v2.m  optimiser_3d_v2_no_plots.m  optimiser_3d_v3.m  optimiser_3d_v4.m  optimiser_3d_v4_no_plots.m  optimiser_surface.csv  optimiser_surface2.csv  optimiser_surface_full.txt  optimiser_v1.m  optimiser_v2.m  optimiser_v3.m  optimising_recursive_subdivision.m  output.txt  output_file.txt  rust_perf_surf_plots.m  rust_performance_plots.m  rust_surface_viewer.m  surface_viewer.m
rust_simulator/: .gitignore  Cargo.toml  README.md
rust_simulator/assets/: agile_tariff.csv  input_list.csv
rust_simulator/pkg/: package.json  rust_simulator.d.ts  rust_simulator.js  rust_simulator_bg.wasm  rust_simulator_bg.wasm.d.ts
rust_simulator/src/: heat_ninja.rs  heatninja.rs  lib.rs  main.rs
rust_simulator/tests/: pysim.py
tests/: main.py
(+109 files in other folders)
